@@ -197,7 +197,7 @@ static int testMultithreadedPost() {
   cbc.pos = 0;
   d = MHD_start_daemon(MHD_USE_THREAD_PER_CONNECTION |MHD_USE_DEBUG,
 		       1081,
-		       &apc_all,
+		       NULL,
 		       NULL,
 		       &ahc_echo,
 		       NULL,
@@ -290,7 +290,7 @@ static int testExternalPost() {
   cbc.pos = 0;
   d = MHD_start_daemon(MHD_USE_DEBUG,
 		       1082,
-		       &apc_all,
+		       NULL,
 		       NULL,
 		       &ahc_echo,
 		       NULL,
